syntax = "proto3";

option go_package = "./;pb";


service StreamServer {
  rpc ListValue(SimpleRequest) returns(stream StreamResponse){};
}

message SimpleRequest{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 请求参数
  string data = 1;
}

message StreamResponse{
  // 流式响应数据
  string stream_value = 1;
}